--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,361 @@
-h1 {
-    color: #54ced5;
-    font-size: 26pt;
-    background-color: bisque;
-}
+    @import url('https://fonts.googleapis.com/css?family=Anton|Noto+Sans+TC|Noto+Serif+TC');
+    .vertical-mode {
+        writing-mode: tb-rl;
+        -webkit-writing-mode: vertical-rl;
+        writing-mode: vertical-rl;
+        float: left;
+    }
+    
+    .chinesefont {
+        font-family: 'Noto Sans TC', sans-serif;
+    }
+    
+    .chinesefont1 {
+        font-family: 'Noto Serif TC', serif;
+    }
+    
+    .big {
+        font-size: 20pt;
+        font-weight: 700;
+    }
+    
+    .righthome {
+        background: linear-gradient(90deg, #FEC804 380px, white 0);
+        /* 原文: https://www.w3cplus.com/css3/css-secrets/cutout-corners.html © w3cplus.com */
+    }
+    
+    @keyframes typing {
+        from {
+            width: 0
+        }
+    }
+    
+    @keyframes caret {
+        50% {
+            border-color: transparent;
+        }
+    }
+    
+    .typing {
+        width: 10em;
+        overflow: hidden;
+        white-space: nowrap;
+        border-right: 0.1em solid;
+        animation: typing 2s steps(12), caret 0.5s steps(2) infinite;
+        animation-iteration-count: infinite;
+        animation-direction: alternate;
+        /* 原文網址：https://kknews.cc/news/lp92vkz.html */
+    }
+    
+    .resume {
+        color: white;
+        font-size: 50pt;
+    }
+    
+    .resume1 {
+        color: #181B46;
+        background: white;
+        font-family: 'Anton', sans-serif;
+        height: 30px;
+        letter-spacing: 10px;
+        box-shadow: 7px 7px 0px #181B46;
+    }
+    
+    .home-photo {
+        background: url('../img/IMG_20190310_150354.jpg') no-repeat;
+        background-size: cover;
+        border-radius: 50%;
+        width: 200px;
+        height: 200px;
+        padding-left: 100px;
+        box-shadow: 0px 0px 11px 0px black;
+    }
+    
+    .keyword {
+        font-size: 10pt;
+    }
+    
+    .keyword:hover {
+        font-size: 15pt;
+        color: #181B46;
+        background-color: #FEC804;
+        height: 40px;
+        width: 300px;
+        padding-bottom: 20px;
+        font-weight: 900;
+    }
+    
+    #about {
+        background-color: rgb(250, 246, 241);
+    }
+    
+    #about-margin {
+        margin-top: 20px;
+    }
+    
+    #aboutborder {
+        margin-left: 70px;
+    }
+    
+    .fontbigger {
+        font-size: 25pt;
+    }
+    
+    #about-me {
+        font-size: 30pt;
+        margin-top: 30px;
+        margin-right: 30px;
+        letter-spacing: 10px;
+        color: #181B46;
+        height: 300px;
+    }
+    
+    .icon-bigger {
+        font-size: 50px;
+        margin-right: 40px;
+        margin-left: 40px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+    
+    #interest {
+        font-size: 20pt;
+        color: white;
+        background-color: rgb(49, 52, 105);
+        margin-top: 20px;
+        letter-spacing: 10px;
+        font-weight: 400;
+    }
+    
+    #experience-top {
+        padding-top: 30px;
+    }
+    
+    .school {
+        margin-left: 50px;
+        margin-top: 30px;
+        font-size: 18px;
+        list-style-type: square;
+    }
+    
+    .list-margin {
+        margin-bottom: 10px;
+    }
+    
+    #junior {
+        padding-bottom: 27px;
+    }
+    
+    #senior {
+        padding-top: 70px;
+        padding-bottom: 53.5px;
+    }
+    
+    #uni {
+        padding-top: 70px;
+        padding-bottom: 85.7px;
+    }
+    
+    .award {
+        padding-top: 50px;
+        padding-bottom: 70px;
+    }
+    
+    .col-md-4,
+    .col-sm-6 {
+        padding-right: 0px;
+        padding-left: 0px;
+    }
+    
+    .fa-trophy {
+        font-size: 100px;
+        margin-right: 50px;
+        margin-top: 10px;
+        float: right;
+        color: #FEC804;
+    }
+    
+    #work {
+        padding-bottom: 30px;
+    }
+    
+    #super {
+        background: url('../img/super.jpg') no-repeat;
+        background-size: cover;
+        height: 370px;
+        z-index: 1;
+        display: block;
+        position: relative;
+        opacity: 4;
+        transform: scale(1, 1);
+        transition: all 1s ease-out;
+    }
+    
+    #piece {
+        background: url('../img/piece.jpg')no-repeat;
+        background-size: cover;
+        height: 370px;
+        z-index: 2;
+        display: block;
+        position: relative;
+        opacity: 1;
+        transform: scale(1, 1);
+        transition: all 1s ease-out;
+    }
+    
+    #we {
+        background: url('../img/we.jpg')no-repeat;
+        background-size: cover;
+        height: 370px;
+        z-index: 3;
+        display: block;
+        position: relative;
+        opacity: 1;
+        transform: scale(1, 1);
+        transition: all 1s ease-out;
+    }
+    
+    #try {
+        background: url('../img/try.jpg')no-repeat;
+        background-size: cover;
+        height: 370px;
+        z-index: 4;
+        display: block;
+        position: relative;
+        opacity: 1;
+        transform: scale(1, 1);
+        transition: all 1s ease-out;
+    }
+    
+    #super:hover,
+    #piece:hover,
+    #we:hover,
+    #try:hover {
+        opacity: .8;
+        transform: scale(1.2, 1.2);
+        z-index: 5;
+    }
+    
+    .chi {
+        margin-top: 50px;
+    }
+    
+    .col-sm-3,
+    .col-md-3 {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+    
+    .video-container {
+        position: relative;
+        padding-bottom: 56.25%;
+        padding-top: 40px;
+        height: 0;
+        overflow: hidden;
+        margin-top: 50px;
+    }
+    
+    .video-container iframe,
+    .video-container object,
+    .video-container embed {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 300;
+        height: 200;
+    }
+    
+    [id^='homework'] {
+        background-size: cover;
+        margin-top: 50px;
+        height: 270px;
+        transition: all 0.5s ease;
+    }
+    
+    .homeworkText {
+        color: white;
+        text-shadow: 0 5px 10px rgba(0, 0, 0, .5);
+        text-align: center;
+        line-height: 150px;
+        transition: all 0.5s ease;
+        font-size: 6px;
+        opacity: 0;
+    }
+    
+    .homeworkText1 {
+        color: #181B46;
+        text-shadow: 0 5px 10px rgba(0, 0, 0, .5);
+        text-align: center;
+        line-height: 150px;
+        transition: all 0.5s ease;
+        font-size: 6px;
+        opacity: 0;
+    }
+    
+    [id^='homework']:hover>.homeworkText {
+        opacity: 1;
+        font-size: 24px;
+    }
+    
+    [id^='homework']:hover>.homeworkText1 {
+        opacity: 1;
+        font-size: 24px;
+    }
+    
+    [id^='homework']:hover {
+        filter: grayscale(30%);
+        opacity: 0.8;
+    }
+    
+    #homework2 {
+        background-image: url('../img/self-introduction.png');
+    }
+    
+    #homework3 {
+        background-image: url('../img/pricing-table.png');
+    }
+    
+    #homeworkchimei {
+        background-image: url('../img/chimei.png');
+        background-size: cover;
+        margin-top: 50px;
+        height: 220px;
+        transition: all 0.5s ease;
+    }
+    
+    .bounce {
+        animation-duration: 1s;
+        animation-iteration-count: 6;
+    }
+    
+    #goTopBtn {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        border: none;
+        position: fixed;
+        right: 15px;
+        bottom: 15px;
+        z-index: 1000;
+        display: none;
+    }
+    
+    @media only screen and (max-width: 580px) {
+        .home-photo {
+            width: 150px;
+            height: 150px;
+            margin: 15px;
+            padding-top: 50px;
+            padding-bottom: 12px;
+        }
+    }
+    
+    @media only screen and (max-width: 767px) {}
+    
+    .home-photo {
+        width: 170px;
+        height: 170px;
+        margin: 15px;
+    }
+    
+    @media only screen and (max-width: 1024px) {}
