--- a/project/project.css
+++ b/project/project.css
@@ -144,7 +144,7 @@
     }
     #moodlight {
         background: url(../img/feature-project/moodlight/hello1.png) no-repeat center fixed;
-        background-size: contain;
+        background-size: cover;
     }
     .project-page {
         display: flex;
