--- a/project/project.css
+++ b/project/project.css
@@ -90,6 +90,21 @@
     font-weight: 400;
 }
 
+.swot-tag {
+    font-size: 16px;
+    background-color: rgba(254, 200, 4, 0.3);
+    padding: 25px 5px;
+    /* max-width: 80vw; */
+    /* height: 110px; */
+    text-align: center;
+    line-height: 25px;
+    margin: 5px 10px;
+    display: flex;
+    /* justify-content: center; */
+    /* align-items: center; */
+    font-weight: 400;
+}
+
 .go-tag {
     border-bottom: #FEC804 1px solid;
 }
@@ -143,8 +158,8 @@
         /* background-position-x: center; */
     }
     #moodlight {
-        /* background: url(../img/feature-project/moodlight/hello1.png) no-repeat center fixed; */
-        background-size: contain;
+        background: url(../img/feature-project/moodlight/hello1.png) no-repeat center fixed;
+        background-size: cover;
     }
     .project-page {
         display: flex;
