--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -20,9 +20,9 @@ body {
 html,
 body {
     width: 100%;
-    height: 100%;
-    overflow-x: hidden;
-    /* overflow-y: scroll; */
+    height: 100vh;
+    /* height: var(--doc-height); */
+    /* overflow-x: hidden; */
 }
 
 
