--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -20,7 +20,7 @@ body {
 html,
 body {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     /* height: var(--doc-height); */
     /* overflow-x: hidden; */
 }
