--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -420,7 +420,7 @@ th {
     align-items: center;
     min-height: 100vh;
     max-width: 100vw;
-    background: url(../img/home_bg.jpg) no-repeat center fixed;
+    background: url(../img/home_bg.png) no-repeat center fixed;
     background-size: cover;
 }
 
@@ -499,6 +499,7 @@ th {
 
 .project-intro {
     margin: auto 0;
+    padding: 0 0;
 }
 
 .keep-all {
@@ -656,6 +657,11 @@ footer {
     transform: scale(1.1);
 }
 
+.img-mobile {
+    height: 260px;
+    width: 100%;
+}
+
 
 /*---------------------------------------
    Mobile Responsive         
@@ -730,6 +736,9 @@ footer {
     }
     video {
         height: 100vw;
+    }
+    .img-mobile {
+        height: 200px;
     }
 }
 
