--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -290,6 +290,7 @@ th {
     justify-content: center;
     align-items: center;
     background: none repeat scroll 0 0 #ffffff;
+    opacity: 1;
 }
 
 .spinner {
