--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -84,11 +84,19 @@ strong {
     line-height: 2.5rem;
 }
 
-p {
+p{
     color: #888;
     font-size: 16px;
     font-weight: 300;
     line-height: 1.8rem;
+    letter-spacing: 1.5px;
+}
+
+td,th{
+    color: #888;
+    font-size: 16px;
+    font-weight: 300;
+    /* line-height: 1.8rem; */
     letter-spacing: 1.5px;
 }
 
@@ -264,10 +272,10 @@ a:focus {
 
 /* table */
 
-.table,
+/* .table,
 .table-bordered {
     border: #cccccc 1px solid;
-}
+} */
 
 th {
     font-weight: 500;
@@ -581,7 +589,7 @@ video {
 #about {
     display: flex;
     align-items: center;
-    min-height: 100vh;
+    min-height: 110vh;
     max-width: 100vw;
     /* margin: 0px 30px; */
     justify-content: center;
