--- a/css/index.css
+++ b/css/index.css
@@ -1,25 +1,27 @@
  /* @import url('https://fonts.googleapis.com/css?family=Anton|Noto+Sans+TC|Noto+Serif+TC'); */
- 
+
  @import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Noto+Sans+TC:wght@100;300;400;500;700&family=Quattrocento&family=Roboto&display=swap');
+
  .vertical-mode {
      writing-mode: tb-rl;
      -webkit-writing-mode: vertical-rl;
      writing-mode: vertical-rl;
      float: left;
  }
- 
+
  body {
      font-family: 'Quattrocento', serif, 'Noto Sans TC', sans-serif;
  }
- 
+
  .text-roboto {
      font-family: 'Roboto', sans-serif;
  }
- 
+
  .nav-link,
  footer {
      font-family: 'Julius Sans One', sans-serif;
  }
+
  /* .big {
      font-size: 20pt;
      font-weight: 700;
@@ -28,27 +30,68 @@
      background: linear-gradient(90deg, #FEC804 380px, white 0);
      /* 原文: https://www.w3cplus.com/css3/css-secrets/cutout-corners.html © w3cplus.com 
  }*/
- 
+
+
  @keyframes typing {
      from {
          width: 0
      }
  }
- 
+
  @keyframes caret {
      50% {
-         border-color: transparent;
+         border-right-color: #000;
      }
  }
- 
+
  .typing {
-     width: 10em;
-     overflow: hidden;
+     /* font-size: 22px; */
+     width: 9em;
      white-space: nowrap;
-     border-right: 0.1em solid;
-     animation: typing 2s steps(8), caret 0.5s steps(2) infinite;
+     overflow: hidden;
+     animation: typing 1s steps(9),
+         caret .5s steps(1) 10;
+     border-right: 1px solid transparent;
      animation-iteration-count: infinite;
      animation-direction: alternate;
-     padding-top: 10px;
-     /* 原文網址：https://kknews.cc/news/lp92vkz.html */
+
  }
+
+ .circle {
+     width: 150px;
+     /* 調整圓的直徑 */
+     height: 150px;
+     /* 調整圓的直徑 */
+     border-radius: 50%;
+     /* 讓元素變成圓形 */
+     background-image: linear-gradient(-225deg, #9EFBD3 0%, #57E9F2 48%, #45D4FB 100%);
+     /* 使用漸層顏色 */
+     position: absolute;
+     top: 30%;
+     left: 20%;
+     transform: translate(-50%, -50%);
+     filter: blur(2px);
+     /* 添加模糊效果，10px 是模糊半徑 */
+ }
+
+ .function-based-values-demo {
+     display: flex;
+     justify-content: space-around;
+     align-items: center;
+     height: 200px;
+ }
+
+ .el {
+     width: 50px;
+     height: 50px;
+     /* background-color: #f00; */
+     color: #fff;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+ }
+
+
+
+ /* 作者：南极一块修炼千年的大冰块 链接：https: //juejin.cn/post/6975531630836318222 */
+ /* 来源：稀土掘金 著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。 */
